--- a/public/stylesheet/style.css
+++ b/public/stylesheet/style.css
@@ -16,11 +16,11 @@ h2, h3, h4 {
 }
 
 /* Main content area */
-a:link, a:visited, a:hover{
+a:link, a:visited, a:hover, #links a:hover{
 
       text-decoration: none;
     font-family: 'Poller One', cursive;
-      color: blue;
+     color: #000088;
   }
 
 #slides  {
@@ -28,6 +28,28 @@ a:link, a:visited, a:hover{
 
 
 }
+.menulink{
+            
+            width: auto;
+            height: auto;
+            padding: 5px;
+            border: 2px solid #333;
+            -moz-border-radius: 10px;
+            -webkit-border-radius: 10px;
+            border-radius: 10px;
+            margin: 5px;
+            background: #fff;
+            color: #fff;
+            
+                //background: #6B9600;
+    color: #fff;
+    font-size: 15px;
+    text-shadow: 0 0 0 #000;
+    -moz-box-shadow: 0 0 .5em rgba(0, 0, 0, .8);
+    -webkit-box-shadow: 0 0 .5em rgba(0, 0, 0, .8);
+    box-shadow: 0 0 .5em rgba(0, 0, 0, .8);
+    
+            }
 
 #banner{
         float: right;
@@ -57,7 +79,7 @@ a:link, a:visited, a:hover{
     text-align: center;
     margin: 0px 20px;
     padding: 5px;
-    background: #C9F76F; //rgba(255,255,102, 0.1);
+    background: #DDE08D; //rgba(255,255,102, 0.1);
     border: 1px solid #333;
     -moz-border-radius: 10px;
     -webkit-border-radius: 10px;
@@ -74,8 +96,9 @@ a:link, a:visited, a:hover{
     font-family: 'Poller One', cursive;
     font-weight: bold;
     margin: 20px;
-    color: #942a25;
+    color: #fff;//#942a25;
     font-size: 2em;
+    text-shadow: 0 0 3px #000;
 }
 
 /* The initial pile of unsorted cards */
