--- a/views/layout.jade
+++ b/views/layout.jade
@@ -24,7 +24,7 @@ html
   
     title Free online learning, kids build websites
     
-  
+    link(rel='shortcut icon' href='/images/favicon.ico' type='image/x-icon')
     link(rel="stylesheet" type="text/css" href="/stylesheet/jquery.ui.all.css")
     link(rel="stylesheet" type="text/css" href="/stylesheet/style.css")
     link(rel="stylesheet" type="text/css" href="/stylesheet/sample.css")
