--- a/views/socket.jade
+++ b/views/socket.jade
@@ -81,7 +81,7 @@ block content
             });
             
         $('#connect').click(function(e){
-            
+            $('#status').html('Connecting...'); 
             connect();
             //alert($('#user').val())
                //if($('#user').val()!=null){(socket.emit('adduser', $('#user').val());}
