--- a/views/video.jade
+++ b/views/video.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content       
        
-        video#video
+        video#video(style="width:100px")
         img#demo
         div
           button#record Record
